# ig

./: .dockerignore  .gitignore  README.md  probe_proxies.py  pyproject.toml  scrape_advanced_name.py
examples/: proxies.example.txt  sample_wordlist.txt
ig_scanner/: __init__.py  checker.py  scanner.py  web.py
ig_scanner/static/: app.js  index.html  style.css
tests/: test_checker.py  test_generator.py
